Fix an issue in address book